<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_fragment">


    <TextView
        android:id="@+id/homeScreenWelcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:text="@string/dist"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeScreenStepsTextView" />

    <Button
        android:id="@+id/homeScreenStartButton"
        android:layout_width="382dp"
        android:layout_height="54dp"
        android:background="#237A02"
        android:text="@string/new_walk"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
...
