<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cse110project.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_routes"
        android:name="com.example.cse110project.ui.routes.RoutesFragment"
        android:label="Routes"
        tools:layout="@layout/fragment_routes"/>

    <fragment
        android:id="@+id/navigation_demo"
        android:name="com.example.cse110project.StepAndTimeMocking"
        android:label="Demo"
        tools:layout="@layout/fragment_demo" />

    <fragment
        android:id="@+id/navigation_team"
        android:name="com.example.cse110project.ui.Team.TeamFragment"
        android:label="Team"
        tools:layout="@layout/fragment_team" />



</navigation>